@@ -93,6 +93,7 @@ Bugfixes:
   SCOREP_RECORDING_OFF.
 - Cray's OMPT implementation reuses data that is supposed to be
   parallel-region local. Handle this gracefully.
+- Fix a race condition in BFD-based addr2line lookup.
 
 ------------------- Released version 8.4 -----------------------------
 
